--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 actix-web = "3"
 listenfd = "0.3"
 dotenv-parser =  "0.1"
+tracing = "0.1"
+tracing-subscriber = "0.2"
+tracing-futures = "0.2"
