--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3"
+sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-rustls", "uuid" ] }
+uuid = { version = "0.8", features = ["v4", "serde"] }
 listenfd = "0.3"
 dotenv-parser =  "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 tracing-futures = "0.2"
+serde = "1"
+serde_json = "1"
