--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,8 @@
     "test": "web-test-runner \"src/**/*.test.js\""
   },
   "dependencies": {
+    "http-proxy": "^1.18.1",
+    "ky": "^0.27.0",
     "svelte": "^3.24.0"
   },
   "devDependencies": {
