--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
       - "8080:8080"
     volumes: 
       - "./app:/usr/src/app"
+    network_mode: "host"
     working_dir: /usr/src/app
     user: mountuser
     command: [ "npm", "start" ]
